--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -301,16 +301,16 @@
                                 <td><select id="select_species" class="group-select">
                                     </select></td>
                             </tr>
-                            <!-- <tr>
-                                <td>County Selectize</td>
-                                <td><select id="selectize_county" multiple placeholder="Select counties...">
-                                    </select></td>
-                            </tr> -->
                             <tr>
+                                <td>County</td>
+                                <td><select id="selectize_county">
+                                    </select></td>
+                            </tr>
+                            <!-- <tr>
                                 <td>County</td>
                                 <td><select id="select_county" class="group-select">
                                     </select></td>
-                            </tr>
+                            </tr> -->
                             <tr>
                                 <td>Planting Year</td>
                                 <td><select id="select_planting_year" class="group-select">
@@ -590,8 +590,6 @@
                 cov_crop_planting_date.setMonth(data[i].properties.cc_planting_date.getMonth())
                 cov_crop_planting_date.setDate(data[i].properties.cc_planting_date.getDate())
 
-                console.log("Planting date: " + data[i].properties.cc_planting_date)
-
 
                 //Julian day calc
                 data[i].properties.julian_day = calcJulianDay(data[i].properties.cc_planting_date)
@@ -662,45 +660,47 @@
             }
 
 
-            // var $selectize_county = $(function () {
-            //     $("#selectize_county").selectize({
-            //         plugins: ["restore_on_backspace", "clear_button"],
-            //         delimiter: " - ",
-            //         persist: false,
-            //         maxItems: null,
-            //         valueField: "value",
-            //         labelField: "label",
-            //         searchField: ["value", "label"],
-            //         options: pop_selectize_box(submission_data, "selectize_county", "county_single"),
-            //         onChange: function (value, isOnInitialize) {
-            //             updateChart(false)
-            //         }
-            //     });
-            // });
+            var $selectize_county = $(function () {
+                $("#selectize_county").selectize({
+                    plugins: ["restore_on_backspace", "clear_button"],
+                    delimiter: " - ",
+                    placeholder: "All counties...",
+                    persist: false,
+                    closeAfterSelect: true,
+                    maxItems: null,
+                    valueField: "value",
+                    labelField: "label",
+                    searchField: ["value", "label"],
+                    options: pop_selectize_box(submission_data, "selectize_county", "county_single"),
+                    onChange: function (value, isOnInitialize) {
+                        updateChart(false)
+                    }
+                });
+            });
             // var county_control = $selectize_county[0].selectize;
-            // var $selectize_species = $(function () {
-            //     $("#select_species").selectize({
-            //         plugins: ["restore_on_backspace", "clear_button"],
-            //         delimiter: " - ",
-            //         persist: false,
-            //         maxItems: null,
-            //         valueField: "value",
-            //         labelField: "label",
-            //         searchField: ["value", "label"],
-            //         options: pop_selectize_box(submission_data, "select_species", "cc_species"),
-            //         onChange: function (value, isOnInitialize) {
-            //             updateChart(false)
-            //         }
-            //     });
-            // });
+            var $selectize_species = $(function () {
+                $("#select_species").selectize({
+                    plugins: ["restore_on_backspace", "clear_button"],
+                    delimiter: " - ",
+                    persist: false,
+                    maxItems: null,
+                    valueField: "value",
+                    labelField: "label",
+                    searchField: ["value", "label"],
+                    options: pop_selectize_box(submission_data, "select_species", "cc_species"),
+                    onChange: function (value, isOnInitialize) {
+                        updateChart(false)
+                    }
+                });
+            });
             // var species_control = $selectize_county[0].selectize;
             //pop_selectize_box(submission_data, "selectize_county", "county_single", control);
 
-            pop_select_box(submission_data, "select_species", "cc_species");
+            // pop_select_box(submission_data, "select_species", "cc_species");
             pop_select_box(submission_data, "select_soil_texture", "dominant_soil_texture");
             pop_select_box(submission_data, "select_seeding_method", "cc_seeding_method")
             pop_select_box(submission_data, "select_planting_year", "year");
-            pop_select_box(submission_data, "select_county", "county_single");
+            // pop_select_box(submission_data, "select_county", "county_single");
             pop_select_box(submission_data, "select_tillage", "residue_remaining");
             // $('#select_species').selectize();
 
@@ -969,8 +969,8 @@
 
                 filtered_data = filterDataSpecies(filtered_data)
 
-                filtered_data = filterDataCounty(filtered_data)
-                // filtered_data = filterDataCountySelectize(filtered_data)
+                // filtered_data = filterDataCounty(filtered_data)
+                filtered_data = filterDataCountySelectize(filtered_data)
 
                 filtered_data = filterDataSoilText(filtered_data)
 
@@ -1066,15 +1066,16 @@
                 var selector;
 
                 selector = "#select_species";
-
-                var species = d3.select(selector).node().value
-                console.log(species)
-                if (species == "All") {
+                var array = $(selector).selectize()[0].selectize.getValue()
+                // If null or of length 0, then no filtering
+                if (array == null | array.length == 0) {
                     return data
                 }
                 return data.filter(function (d) {
-                    return d.properties.cc_species === species;
-                });
+
+                    return array.includes(d.properties.cc_species)
+
+                })
 
             }
 
