added link to preregister

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -12,8 +12,9 @@
         <h3 class="card-title">Welcome</h3>
         <p>Since 2020, the Wisconsin Citizen Science Cover Crop project has been collecting information from farmers
           around the state on their cover crop practices and results. You can explore that data via the interactive map
-          and graphs below. For more information on the project background and methods, please visit our <a
-            href="https://www.michaelfields.org/soil-health" target="_blank" rel="noopener noreferrer">website</a>.
+          and graphs below. For more information on the project background and methods, please visit the <a
+            href="https://www.michaelfields.org/soil-health" target="_blank" rel="noopener noreferrer">Michael Fields
+            website</a>.
         </p>
         <div class="card-deck">
 
@@ -55,6 +56,10 @@
 
 
         </div>
+        <hr>
+        <p>Interested in participating? We welcome growers with all levels of experience and types of production
+          systems. Click <a href="https://forms.gle/xPC9b78eCVKPmk6B6">HERE to preregister.</a></p>
+        <hr>
         <br>
         <p>We are grateful to our Soil Health Collaborative partners the USDA-ARS Dairy Forage Research Center &
           UW-Madison's Center for Integrated Agricultural Systems, and to our collaborating Wisconsin farmers. </p>
