--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -59,6 +59,8 @@
         <hr>
         <p>Interested in participating? We welcome growers with all levels of experience and types of production
           systems. Click <a href="https://forms.gle/xPC9b78eCVKPmk6B6">HERE to preregister.</a></p>
+        <img style="display: block; margin-left: auto; margin-right: auto; width: 25%;"
+          src="{% static 'img/qrcode_for_further.png' %}" />
         <hr>
         <br>
         <p>We are grateful to our Soil Health Collaborative partners the USDA-ARS Dairy Forage Research Center &
