--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -412,8 +412,8 @@
             var biomass_val = (biomass_val === null) ? null : roundUp(feature.properties.cc_biomass, 2);
             var popupContent = "<dl>" +
                 // "<dt>ID</dt> <dd>" + feature.id + "</dd>" +
-                "<dt>Cover crop</dt> <dd>" + feature.properties.cc_species + "</dd>" +
-                "<dt>Cover Crop Species and Seeding Rate</dt> <dd>" + feature.properties.cc_species + "<br>" + feature.properties.cc_planting_rate + "</dd>" +
+                "<dt>Cover crops</dt> <dd>" + feature.properties.cc_species_raw + "</dd>" +
+                "<dt>Seeding Rate</dt> <dd>" + feature.properties.cc_planting_rate + "</dd>" +
                 "<dt>Previous crop</dt> <dd>" + feature.properties.previous_crop.toLowerCase().replace("_", " ") + "</dd>" +
                 "<dt>Planting date</dt> <dd>" + planting_date + "</dd>" +
                 "<dt>Dominant soil texture</dt> <dd>" + feature.properties.dominant_soil_texture + "</dd>" +
@@ -439,8 +439,8 @@
             fillOpacity: 0.8
         };
 
-        var dataurl = '/wisc_cc_static_data';
-
+        // var dataurl = '/wisc_cc_static_data';
+        var dataurl = '/get_wisc_cc_data';
         var geojsonObject;
         var soilsLayer;
 
