fixed typo in views; removed weird shadow gap between map and navbar

--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -153,6 +153,10 @@
         .navbar-collapse {
             background-color: #fff;
         }
+
+        .navbar {
+            margin-bottom: 2px;
+        }
     </style>
 
     <!-- Used for  show/collapse panel functions -->
