--- a/templates/home.html
+++ b/templates/home.html
@@ -105,7 +105,7 @@
         </a>
         <a href="{% url 'wisc_cc_home' %}">
           <li class="list-group-item">Wisconsin Cover Crop Citizen Science Project: Gathering data about
-            cover crop usage in Wisconsin</li>
+            cover crops in Wisconsin</li>
         </a>
       </ul>
 
@@ -119,7 +119,7 @@
       <h4><a href="{% url 'kanopy_home' %}">Green CovR</a>: portal for submitting cover crop photos</h4>
       <h4><a href="{% url 'wisc_cc_home' %}">Wisconsin Cover Crop Citizen Science Project</a>: Gathering data about
         cover
-        crop usage in Wisconsin</h4>
+        crops in Wisconsin</h4>
     </div>
   </div>
   <script src="{% static 'js/popper.min.js' %}"></script>
