--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -7,54 +7,34 @@
 {% endblock %}
 
 {% block body %}
-<!-- <a style="font-family: Helvetica" class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Citizen
-  Science Cover
-  Crop Project</a> -->
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse flex-column" id="navbarText">
-      <ul class="navbar-nav">
+  <a style="font-family: Helvetica" class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Citizen
+    Science Cover
+    Crop Project</a>
 
-        <li class="nav-item" id="nav-home">
-          <a class="nav-link" href="{% url 'wisc_cc_home' %}">Home</a>
-        </li>
-        <li class="nav-item" id="nav-graph">
-          <a class="nav-link" href="{% url 'wisc_cc_graph' %}">Graph</a>
-        </li>
-        <li class="nav-item" id="nav-map">
-          <a class="nav-link" href="{% url 'wisc_cc_map' %}">Map</a>
-        </li>
-        <li class="nav-item" id="nav-survey">
-          <a class="nav-link" href="{% url 'wisc_cc_survey' %}">Survey</a>
-        </li>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
 
-      </ul>
-      {% if user.is_authenticated %}
-      <ul class="navbar-nav flex-row mb-2">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
-            {{ user.username }} <br> {{ user.email }}
-          </a>
-          <div class="dropdown-menu dropdown-menu-left" aria-labelledby="userMenu">
-            <a class="dropdown-item" href="{% url 'my_account'  %}">My account</a>
-            <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
-          </div>
-        </li>
-      </ul>
-      {% else %}
-      <form class="form-inline ml-auto">
-        <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-        <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
-      </form>
-      {% endif %}
-      <!-- <span class="navbar-text">
+      <li class="nav-item" id="nav-home">
+        <a class="nav-link" href="{% url 'wisc_cc_home' %}">Home</a>
+      </li>
+      <li class="nav-item" id="nav-graph">
+        <a class="nav-link" href="{% url 'wisc_cc_graph' %}">Graph</a>
+      </li>
+      <li class="nav-item" id="nav-map">
+        <a class="nav-link" href="{% url 'wisc_cc_map' %}">Map</a>
+      </li>
+      <li class="nav-item" id="nav-survey">
+        <a class="nav-link" href="{% url 'wisc_cc_survey' %}">Survey</a>
+      </li>
+
+    </ul>
+    <span class="navbar-text">
       <div class="collapse navbar-collapse" id="mainMenu">
 
         {% if user.is_authenticated %}
@@ -79,8 +59,7 @@
         </form>
         {% endif %}
       </div>
-    </span> -->
-    </div>
+    </span>
   </div>
 </nav>
 <div class="container">
