graph now pull new data as well

--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -555,8 +555,8 @@
 
 
         }
-        var dataurl = '/wisc_cc_static_data';
-        // var dataurl = '/get_wisc_cc_data';
+        //var dataurl = '/wisc_cc_static_data';
+        var dataurl = '/get_wisc_cc_data';
         var submission_data;
 
         var model_data = [];
