adding in calculation of gdu and precip; script `gather_gdu_precip.py` is only meant to be run on the shell and once

--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -1054,7 +1054,7 @@
                 }
                 return data.filter(function (d) {
 
-                    return array.includes(d.properties[target_field])
+                    return array.includes(d.properties[target_field].toString())
 
                 });
             }
